[gd_scene load_steps=8 format=3 uid="uid://cmwat64q4hma3"]

[ext_resource type="Script" path="res://src/Nodes/Scripts/DialogNode.gd" id="1"]
[ext_resource type="Theme" uid="uid://hgc7wambejk3" path="res://Assets/MainEditor.tres" id="1_u84re"]
[ext_resource type="Script" path="res://src/Nodes/Scripts/DialogText.gd" id="2"]

[sub_resource type="StyleBoxEmpty" id="3"]

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(0.298039, 0.298039, 0.298039, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.94902, 0.282353, 0.0784314, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_offset = Vector2(2, 2)

[sub_resource type="FontFile" id="1"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="DialogNode" type="GraphNode" groups=["Dialogs", "Save"]]
z_as_relative = false
custom_minimum_size = Vector2(335, 215)
offset_right = 335.0
offset_bottom = 215.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_u84re")
title = "Dialog Node"
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(0.196078, 0.772549, 0.192157, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 1
slot/0/right_color = Color(0.133333, 0.360784, 0.713726, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color(0.105882, 0.137255, 0.866667, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 1
slot/1/right_color = Color(0.866667, 0.266667, 0.105882, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1")
_dialog_text_path = NodePath("HBoxContainer/VBoxContainer/DialogText")
_title_text_path = NodePath("HBoxContainer/VBoxContainer/TitleText")
_add_response_path = NodePath("HBoxContainer/AddPlayerResponse")
_id_label_path = NodePath("IDLabel")

[node name="HSeparator" type="HSeparator" parent="."]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
mouse_filter = 2
theme_override_styles/separator = SubResource("3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TitleText" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(275, 20)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Title of the dialog"
theme_override_font_sizes/font_size = 14
text = "New Dialog"

[node name="DialogText" type="TextEdit" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(275, 120)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 13
wrap_mode = 1
draw_tabs = true
script = ExtResource("2")

[node name="AddPlayerResponse" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(25, 110)
layout_mode = 2
theme_override_styles/normal = SubResource("4")
theme_override_styles/hover = SubResource("2")
text = "+"

[node name="IDLabel" type="Label" parent="."]
layout_mode = 2
theme_override_fonts/font = SubResource("1")
text = "    ID: -1"

[connection signal="close_request" from="." to="." method="_on_DialogNode_close_request"]
[connection signal="gui_input" from="." to="." method="_on_DialogNode_gui_input"]
[connection signal="position_offset_changed" from="." to="." method="_on_DialogNode_offset_changed"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/TitleText" to="." method="_on_TitleText_gui_input"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/TitleText" to="." method="_on_TitleText_text_changed"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/DialogText" to="." method="_on_DialogText_gui_input"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/DialogText" to="." method="_on_dialog_text_text_changed"]
[connection signal="pressed" from="HBoxContainer/AddPlayerResponse" to="." method="_on_AddPlayerResponse_pressed"]
